Memory stress test that checks OutOfMemoryError stack trace fails

XMLWordPrintable

    • b22

      A stress test that triggers OutOfMemoryErrors and then checks whether the OOME objects have stack traces matching certain patterns can fail when VM internal heap allocation uses up the preallocated OOME objects.

            Assignee:
            Douglas Simon
            Reporter:
            Douglas Simon
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: