8331208: Memory stress test that checks OutOfMemoryError stack trace fails

Reviewed-by: dholmes, never